--- a/static/main.css
+++ b/static/main.css
@@ -4,28 +4,36 @@
   border-radius: 0.4em 0.4em 1em 1em;
   box-shadow: 0 0.2em 0.3em black;
   color: #dbe2ef;
-  min-height: 207px;
+  min-height: 150px;
 }
 .header .top-header {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   gap: 90px;
 }
 .header .top-header .logotype {
-  margin-left: 30px;
   width: 5em;
   height: auto;
   border-radius: 60px;
 }
 .header .top-header h1 {
-  font-size: x-large;
+  font-size: xx-large;
+  display: flex;
+  margin-left: -80px;
 }
 .header .top-header #hamburger-icon {
-  right: 0;
+  right: 5px;
+  top: 10px;
+  position: absolute;
   width: 3em;
   margin: 0em 1em 0 0;
   color: #dbe2ef;
   filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg) brightness(105%) contrast(92%);
+}
+@media screen and (min-width: 750px) {
+  .header .top-header #hamburger-icon {
+    display: none;
+  }
 }
 .header nav {
   display: flex;
@@ -48,4 +56,9 @@
 .header nav ul a:hover {
   transform: scale(1.05);
   color: whitesmoke;
+}
+@media screen and (max-width: 750px) {
+  .header nav {
+    display: none;
+  }
 }
