added so their are no margin or padding by default

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,11 +1,12 @@
 .header {
   background-color: $blue-color;
-  border-radius: 0.4em 0.4em 1em 1em;
+  border-radius: 0em 0em 1em 1em;
   box-shadow: 0 0.2em 0.3em black;
   color: $text-color;
   min-height: 150px;
 
   .top-header {
+    padding-top: 40px;
     display: flex;
     justify-content: center;
     gap: 90px;
