--- a/static/main.css
+++ b/static/main.css
@@ -1,12 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .header {
   background-color: #112d4e;
-  border-radius: 0.4em 0.4em 1em 1em;
+  border-radius: 0em 0em 1em 1em;
   box-shadow: 0 0.2em 0.3em black;
   color: #dbe2ef;
   min-height: 150px;
 }
 .header .top-header {
+  padding-top: 40px;
   display: flex;
   justify-content: center;
   gap: 90px;
