--- a/static/main.css
+++ b/static/main.css
@@ -25,8 +25,14 @@
 }
 .header .top-header h1 {
   font-size: xx-large;
+  font-family: "Inter", sans-serif;
   display: flex;
   margin-left: -80px;
+}
+@media screen and (min-width: 750px) {
+  .header .top-header h1 {
+    font-size: 60px;
+  }
 }
 .header .top-header #hamburger-icon {
   right: 5px;
@@ -54,6 +60,7 @@
   list-style: none;
   text-decoration: none;
   font-size: 0.9em;
+  margin-bottom: 1em;
 }
 .header nav ul a {
   text-decoration: none;
