created footer with styling from header

--- a/src/main.scss
+++ b/src/main.scss
@@ -3,6 +3,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  min-height: 100vh;
+  min-width: 100vw;
+}
 
 @import "variables.scss";
 @import "styles/Header.scss";
+@import "styles/footer.scss";
