--- a/static/main.css
+++ b/static/main.css
@@ -5,6 +5,11 @@
   box-sizing: border-box;
 }
 
+body {
+  min-height: 100vh;
+  min-width: 100vw;
+}
+
 .header {
   background-color: #112d4e;
   border-radius: 0em 0em 1em 1em;
@@ -74,5 +79,54 @@
 @media screen and (max-width: 750px) {
   .header nav {
     display: none;
+  }
+}
+
+footer {
+  background-color: #112d4e;
+  border-radius: 1em 1em 0em 0em;
+  box-shadow: 0 0.2em 0.3em black;
+  color: #dbe2ef;
+  min-height: 150px;
+  gap: 30px;
+  font-family: "Inter", sans-serif;
+}
+@media screen and (min-width: 750px) {
+  footer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+}
+footer .footer-sections {
+  padding: 10px 0 10px 20px;
+  margin: 0.5em;
+}
+footer .footer-sections h3 {
+  margin-bottom: 0.3em;
+  font-size: 20px;
+}
+footer .footer-sections p {
+  font-size: 14px;
+}
+footer .footer-sections .social-media-links {
+  color: #dbe2ef;
+  filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg) brightness(105%) contrast(92%);
+  padding: 3px;
+}
+footer .footer-sections #municipality-logo {
+  width: 100px;
+  height: auto;
+}
+@media screen and (min-width: 750px) {
+  footer .footer-sections .social-media-links {
+    color: #dbe2ef;
+    filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg) brightness(105%) contrast(92%);
+    padding: 3px;
+    width: 2em;
+  }
+  footer .footer-sections #municipality-logo {
+    width: 200px;
+    height: auto;
   }
 }
