--- a/static/main.css
+++ b/static/main.css
@@ -5,11 +5,6 @@
   box-sizing: border-box;
 }
 
-body {
-  min-height: 100vh;
-  min-width: 100vw;
-}
-
 .header {
   background-color: #112d4e;
   border-radius: 0em 0em 1em 1em;
@@ -104,10 +99,11 @@ footer .footer-sections {
 }
 footer .footer-sections h3 {
   margin-bottom: 0.3em;
-  font-size: 20px;
+  font-size: 16px;
+  margin-top: 10px;
 }
 footer .footer-sections p {
-  font-size: 14px;
+  font-size: 12px;
 }
 footer .footer-sections .social-media-links {
   color: #dbe2ef;
@@ -118,14 +114,23 @@ footer .footer-sections #municipality-logo {
   width: 100px;
   height: auto;
 }
+footer .footer-sections #cinema-collab {
+  width: 100px;
+  height: auto;
+}
 @media screen and (min-width: 750px) {
+  footer .footer-sections h3 {
+    font-size: 22px;
+  }
+  footer .footer-sections p {
+    font-size: 20px;
+  }
   footer .footer-sections .social-media-links {
-    color: #dbe2ef;
-    filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg) brightness(105%) contrast(92%);
     padding: 3px;
     width: 2em;
   }
-  footer .footer-sections #municipality-logo {
+  footer .footer-sections #municipality-logo,
+  footer .footer-sections #cinema-collab {
     width: 200px;
     height: auto;
   }
