--- a/static/main.css
+++ b/static/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -75,4 +76,8 @@
   .header nav {
     display: none;
   }
+}
+
+h2 {
+  font-size: 20px;
 }
