--- a/src/styles/pages/newsletter.scss
+++ b/src/styles/pages/newsletter.scss
@@ -1,4 +1,29 @@
-h2{
-    font-size: 20px;
+
+.content{
+    width: 750px;
+    padding: 0 15px 0 15px;
+    margin: auto;
+    background-color: $blue-color;
+    color: whitesmoke;
+    @media screen and (min-width: $screen-breakpoint) {
+        width: 1160px;
+      }
+    
+    h2{
+        font-size: 30px;
+        padding: 1em 1em 1em 0;
+    }
+    p{
+        padding: 1em 1em 1em 0; 
+    }
+    a{
+        a:link { text-decoration: none; }
+        a:visited { text-decoration: none; }
+        a:active { text-decoration: none; }
+    }
+    
+    
 }
+    
+
 @import "../../variables.scss";
