Added background image and smaller changes

--- a/src/styles/pages/newsletter.scss
+++ b/src/styles/pages/newsletter.scss
@@ -1,14 +1,10 @@
-
 .content{
-    width: 750px;
-    padding: 0 15px 0 15px;
+    width: 863px;
+    padding: 0 15px 15px 15px;
     margin: auto;
     background-color: $blue-color;
     color: whitesmoke;
-    @media screen and (min-width: $screen-breakpoint) {
-        width: 1160px;
-      }
-    
+    text-align: center;
     h2{
         font-size: 30px;
         padding: 1em 1em 1em 0;
@@ -17,12 +13,24 @@
         padding: 1em 1em 1em 0; 
     }
     a{
-        a:link { text-decoration: none; }
-        a:visited { text-decoration: none; }
-        a:active { text-decoration: none; }
+        a:link{ 
+            text-decoration: none;
+            color: lightskyblue; 
+        }
+    
+        a:visited{ 
+            text-decoration: none; 
+            color: lightskyblue; 
+        }
+        a:active{ 
+            text-decoration: none;
+            color: lightskyblue; 
+         }
     }
-    
-    
+    @media screen and (min-width: $screen-breakpoint) {
+        width: 1170px;
+      }
+
 }
     
 
