--- a/src/styles/ticket-info-page.scss
+++ b/src/styles/ticket-info-page.scss
@@ -1,3 +1,44 @@
-.main-title {
-    color: blue;
+main {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+
+    .main-title {
+        font-size: 7em;
+        letter-spacing: 0.3em;
+    }
+
+    small {
+        font-size: 2em;
+        font-style: italic;
+    }
+    
+    section {
+        max-width: 80%;
+    
+        img{
+            min-width: 100%;
+            max-height: 500px;
+            object-fit:cover;
+        }
+    
+    
+        .sub-title {
+            font-size: x-large;
+            margin-top: 1em;
+            margin-bottom: 0.5em;
+        }
+
+        .question-title {
+            font-size: large;
+            margin-bottom: 0.5em;
+        }
+        
+        .answer {
+            font-size: medium;
+            margin-bottom: 0.5em;
+        }
+    
+    }
 }
+
