--- a/static/main.css
+++ b/static/main.css
@@ -77,6 +77,37 @@
   }
 }
 
-.main-title {
-  color: blue;
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main .main-title {
+  font-size: 7em;
+  letter-spacing: 0.3em;
+}
+main small {
+  font-size: 2em;
+  font-style: italic;
+}
+main section {
+  max-width: 80%;
+}
+main section img {
+  min-width: 100%;
+  max-height: 500px;
+  object-fit: cover;
+}
+main section .sub-title {
+  font-size: x-large;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+}
+main section .question-title {
+  font-size: large;
+  margin-bottom: 0.5em;
+}
+main section .answer {
+  font-size: medium;
+  margin-bottom: 0.5em;
 }
