--- a/src/styles/ticket-info-page.scss
+++ b/src/styles/ticket-info-page.scss
@@ -3,42 +3,75 @@ main {
     flex-direction: column;
     align-items: center;
 
-    .main-title {
-        font-size: 7em;
-        letter-spacing: 0.3em;
-    }
-
-    small {
-        font-size: 2em;
-        font-style: italic;
-    }
+    
     
     section {
         max-width: 80%;
-    
-        img{
-            min-width: 100%;
-            max-height: 500px;
-            object-fit:cover;
+        
+        .main-title {
+            width: 100%;
+            text-align: center;
+            font-size: 4em;
+            letter-spacing: 0.3em;
+            padding-bottom: 0.1em;
         }
-    
-    
+        
+        @media (max-width: 750px) {
+            .main-title {
+                width: 100%;
+                text-align: center;
+                font-size: 2em;
+                letter-spacing: 0.3em;
+            }
+        }
+        
         .sub-title {
-            font-size: x-large;
+            text-align: center;
+            font-size: 2.5em;
             margin-top: 1em;
             margin-bottom: 0.5em;
+            text-decoration: underline;
+        }
+        
+        small {
+            text-align: center;
+            margin-bottom: 1em;
+            display: block;
+            font-size: 1.5em;
+            font-style: italic;
         }
 
-        .question-title {
-            font-size: large;
+        @media (max-width: 750px) {
+            small {
+                text-align: center;
+                font-size: 1em;
+                font-style: italic;
+            }
+        }
+        .questions-h2 {
+            text-align: center;
+            font-size: 2em;
             margin-bottom: 0.5em;
+            
+
+        }
+
+        .asked-title {
+            
+            font-size: large;
+            margin-bottom: 1em;
         }
         
         .answer {
             font-size: medium;
             margin-bottom: 0.5em;
         }
-    
+        
+        img{
+            width: 100%;
+            max-height: 25em;
+            object-fit:cover;
+        }
     }
 }
 
