--- a/static/main.css
+++ b/static/main.css
@@ -82,32 +82,60 @@ main {
   flex-direction: column;
   align-items: center;
 }
-main .main-title {
-  font-size: 7em;
-  letter-spacing: 0.3em;
-}
-main small {
-  font-size: 2em;
-  font-style: italic;
-}
 main section {
   max-width: 80%;
 }
-main section img {
-  min-width: 100%;
-  max-height: 500px;
-  object-fit: cover;
+main section .main-title {
+  width: 100%;
+  text-align: center;
+  font-size: 4em;
+  letter-spacing: 0.3em;
+  padding-bottom: 0.1em;
+}
+@media (max-width: 750px) {
+  main section .main-title {
+    width: 100%;
+    text-align: center;
+    font-size: 2em;
+    letter-spacing: 0.3em;
+  }
 }
 main section .sub-title {
-  font-size: x-large;
+  text-align: center;
+  font-size: 2.5em;
   margin-top: 1em;
   margin-bottom: 0.5em;
+  text-decoration: underline;
 }
-main section .question-title {
-  font-size: large;
+main section small {
+  text-align: center;
+  margin-bottom: 1em;
+  display: block;
+  font-size: 1.5em;
+  font-style: italic;
+}
+@media (max-width: 750px) {
+  main section small {
+    text-align: center;
+    font-size: 1em;
+    font-style: italic;
+  }
+}
+main section .questions-h2 {
+  text-align: center;
+  font-size: 2em;
   margin-bottom: 0.5em;
+}
+main section .asked-title {
+  font-size: large;
+  margin-bottom: 1em;
 }
 main section .answer {
   font-size: medium;
   margin-bottom: 0.5em;
+}
+main section img {
+  width: 100%;
+  max-height: 25em;
+  object-fit: cover;
 }
