--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -43,13 +43,21 @@
     justify-content: center;
     margin-top: 30px;
     font-size: $font-size;
-    ul {
-      display: flex;
+    .main-nav {
+      display: none;
       gap: 40px;
       list-style: none;
       text-decoration: none;
       font-size: 0.9em;
       margin-bottom: 1em;
+
+      &.show {
+        display: flex;
+      }
+
+      @media screen and (min-width: $screen-breakpoint) {
+        display: flex;
+      }
 
       a {
         text-decoration: none;
@@ -61,9 +69,6 @@
           color: whitesmoke;
         }
       }
-    }
-    @media screen and (max-width: $screen-breakpoint) {
-      display: none;
     }
   }
 }
