--- a/src/main.scss
+++ b/src/main.scss
@@ -6,4 +6,6 @@
 
 @import "variables.scss";
 @import "styles/Header.scss";
+@import "styles/footer.scss";
+@import "styles/pages/newsletter.scss";
 @import "styles/ticket-info-page.scss";
