Added giftCard html and scss files

--- a/src/main.scss
+++ b/src/main.scss
@@ -12,3 +12,4 @@ html{
 @import "styles/Header.scss";
 @import "styles/footer.scss";
 @import "styles/pages/newsletter.scss";
+@import "styles/pages/giftCard.scss";
