adding cards to frontpage

--- a/src/main.scss
+++ b/src/main.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-html{
+html {
   background-image: url("../static/background.png");
 }
 
@@ -13,4 +13,4 @@ html{
 @import "styles/footer.scss";
 @import "styles/pages/newsletter.scss";
 @import "styles/ticket-info-page.scss";
-
+@import "styles/cards.scss";
