--- a/static/main.css
+++ b/static/main.css
@@ -82,7 +82,6 @@ html {
   }
 }
 
-
 footer {
   background-color: #112d4e;
   border-radius: 1em 1em 0em 0em;
@@ -187,5 +186,67 @@ footer .footer-sections #cinema-collab {
   .content {
     width: 1170px;
   }
+}
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main section {
+  max-width: 80%;
+}
+main section .main-title {
+  width: 100%;
+  text-align: center;
+  font-size: 4em;
+  letter-spacing: 0.3em;
+  padding-bottom: 0.1em;
+}
+@media (max-width: 750px) {
+  main section .main-title {
+    width: 100%;
+    text-align: center;
+    font-size: 2em;
+    letter-spacing: 0.3em;
+  }
+}
+main section .sub-title {
+  text-align: center;
+  font-size: 2.5em;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+  text-decoration: underline;
+}
+main section small {
+  text-align: center;
+  margin-bottom: 1em;
+  display: block;
+  font-size: 1.5em;
+  font-style: italic;
+}
+@media (max-width: 750px) {
+  main section small {
+    text-align: center;
+    font-size: 1em;
+    font-style: italic;
+  }
+}
+main section .questions-h2 {
+  text-align: center;
+  font-size: 2em;
+  margin-bottom: 0.5em;
+}
+main section .asked-title {
+  font-size: large;
+  margin-bottom: 1em;
+}
+main section .answer {
+  font-size: medium;
+  margin-bottom: 0.5em;
+}
+main section img {
+  width: 100%;
+  max-height: 25em;
+  object-fit: cover;
 }
