--- a/src/styles/cards.scss
+++ b/src/styles/cards.scss
@@ -1,1 +1,20 @@
+.picture-container {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
 
+  gap: 70px;
+  @media screen and (max-width: 415px) {
+    grid-template-columns: repeat(1, 3fr);
+    gap: 5px;
+  }
+
+  .cards {
+    width: 330px;
+    height: auto;
+    margin: 60px 0 60px 50px;
+    @media screen and (max-width: $screen-breakpoint) {
+      width: 150px;
+      height: auto;
+    }
+  }
+}
