--- a/static/main.css
+++ b/static/main.css
@@ -250,3 +250,26 @@ main section img {
   max-height: 25em;
   object-fit: cover;
 }
+
+.picture-container {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  gap: 70px;
+}
+@media screen and (max-width: 415px) {
+  .picture-container {
+    grid-template-columns: repeat(1, 3fr);
+    gap: 5px;
+  }
+}
+.picture-container .cards {
+  width: 330px;
+  height: auto;
+  margin: 60px 0 60px 50px;
+}
+@media screen and (max-width: 750px) {
+  .picture-container .cards {
+    width: 150px;
+    height: auto;
+  }
+}
