--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -5,12 +5,13 @@
   color: $text-color;
   min-height: 150px;
 
+  
   .top-header {
     padding-top: 40px;
     display: flex;
     justify-content: center;
     gap: 90px;
-
+    
     .logotype {
       width: 5em;
       height: auto;
@@ -50,6 +51,13 @@
       text-decoration: none;
       font-size: 0.9em;
       margin-bottom: 1em;
+      
+      section {
+        
+        .social-media-links {          
+          @include iconColor;
+        }
+      }
 
       a {
         text-decoration: none;
