Import styling for secNav

--- a/src/main.scss
+++ b/src/main.scss
@@ -13,3 +13,4 @@ html{
 @import "styles/footer.scss";
 @import "styles/main-nav-pages.scss";
 @import "styles/ticket-info-page.scss";
+@import "styles/secNav.scss";
