--- a/src/styles/cards.scss
+++ b/src/styles/cards.scss
@@ -1,19 +1,20 @@
 .picture-container {
   display: grid;
   grid-template-columns: repeat(3, auto);
-
+  grid-template-rows: repeat(5, auto);
   gap: 70px;
+  margin: 50px 0;
   @media screen and (max-width: 415px) {
-    grid-template-columns: repeat(1, 3fr);
-    gap: 5px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
   }
 
   .cards {
-    width: 330px;
-    height: auto;
-    margin: 60px 0 60px 50px;
+    width: 14.1em;
+    margin: 0 auto;
+
     @media screen and (max-width: $screen-breakpoint) {
-      width: 150px;
+      max-width: 7em;
       height: auto;
     }
   }
