--- a/static/main.css
+++ b/static/main.css
@@ -67,6 +67,10 @@ html {
   font-size: 0.9em;
   margin-bottom: 1em;
 }
+.header nav ul section .social-media-links {
+  color: #dbe2ef;
+  filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg) brightness(105%) contrast(92%);
+}
 .header nav ul a {
   text-decoration: none;
   color: #dbe2ef;
