--- a/src/styles/secNav.scss
+++ b/src/styles/secNav.scss
@@ -48,7 +48,7 @@
   background-color: transparent;
   box-shadow: none;
   margin: 0;
-  padding: 20px 29px;
+  padding: 20px 27px;
 
   &:hover, &:focus {
     transform: scale(1.2);
@@ -69,5 +69,13 @@
     color: white;
     padding: 12px 16px;
     text-decoration: none;
+    display: block;
+}
+
+.secNav-dropdown a:hover {
+    background-color: aqua;
+}
+
+.show {
     display: block;
 }
