Added js file and screen

--- a/src/main.scss
+++ b/src/main.scss
@@ -15,4 +15,5 @@ html {
 @import "styles/ticket-info-page.scss";
 @import "styles/secNav.scss";
 @import "styles/cards.scss";
+@import "styles/booking.scss";
 
