--- a/static/main.css
+++ b/static/main.css
@@ -255,6 +255,104 @@ main section img {
   object-fit: cover;
 }
 
+.secNav {
+  margin: 17px 10px;
+}
+@media (min-width: 750px) {
+  .secNav {
+    background-color: #112d4e;
+    box-shadow: 0 0.2em 0.3em black;
+    border-radius: 0.5em 0.5em 0.5em 0.5em;
+  }
+}
+
+.secNav menu {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  max-width: 1000px;
+}
+
+.secNav-menu-item {
+  list-style: none;
+  width: 100%;
+  text-align: center;
+  margin-top: 7px;
+  border-radius: 0.5em 0.5em 0.5em 0.5em;
+  box-shadow: 0 0.2em 0.3em black;
+}
+@media (min-width: 750px) {
+  .secNav-menu-item {
+    width: auto;
+    box-shadow: none;
+    background-color: #112d4e;
+  }
+}
+
+.secNav-menu-item button {
+  cursor: pointer;
+  border: none;
+  background-color: #112d4e;
+  color: #dbe2ef;
+  font-family: "Inter", sans-serif;
+  text-align: center;
+  list-style: none;
+  font-weight: bold;
+  font-size: 16px;
+  width: 100%;
+  border-radius: 0.5em 0.5em 0.5em 0.5em;
+  background-color: transparent;
+  box-shadow: none;
+  margin: 0;
+  padding: 20px 27px;
+}
+.secNav-menu-item button:hover {
+  transform: scale(1.1);
+  color: whitesmoke;
+}
+@media (max-width: 750px) {
+  .secNav-menu-item button {
+    background-color: #091829;
+  }
+  .secNav-menu-item button:hover {
+    background-color: #08121f;
+    transform: scale(1);
+  }
+}
+
+.secNav-dropdown {
+  display: none;
+  position: relative;
+  box-shadow: 0 0.2em 0.3em black;
+  z-index: 1;
+}
+@media (min-width: 750px) {
+  .secNav-dropdown {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.9254901961);
+  }
+}
+
+.secNav-dropdown a {
+  background-color: #112d4e;
+  margin-top: 1px;
+  cursor: pointer;
+  width: 100%;
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.secNav-dropdown a:hover {
+  background-color: #2361a8;
+}
+
+.show {
+  display: block;
+}
+
 .picture-container {
   display: grid;
   grid-template-columns: repeat(3, auto);
@@ -277,4 +375,10 @@ main section img {
     max-width: 7em;
     height: auto;
   }
+}
+
+.screen {
+  width: 65%;
+  background-color: crimson;
+  font-size: 3em;
 }
