--- a/static/main.css
+++ b/static/main.css
@@ -382,3 +382,22 @@ main section img {
   background-color: crimson;
   font-size: 3em;
 }
+
+.seat {
+  background-color: rgb(167, 216, 233);
+  width: 20px;
+  height: 20px;
+}
+
+.seatPlanCanvas {
+  display: grid;
+  grid-template-columns: repeat(12, auto);
+  grid-template-rows: repeat(6, auto);
+  gap: 40px;
+  margin: 50px 0;
+}
+@media screen and (max-width: 415px) {
+  .seatPlanCanvas {
+    gap: 20px;
+  }
+}
