--- a/static/main.css
+++ b/static/main.css
@@ -46,8 +46,7 @@ html {
   width: 3em;
   margin: 0em 1em 0 0;
   color: #dbe2ef;
-  filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg)
-    brightness(105%) contrast(92%);
+  filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg) brightness(105%) contrast(92%);
 }
 @media screen and (min-width: 750px) {
   .header .top-header #hamburger-icon {
@@ -73,16 +72,15 @@ html {
   margin-bottom: 1em;
 }
 @media screen and (min-width: 750px) {
-  .header nav ul section .social-media-links {
-    color: #dbe2ef;
-    filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg)
-      brightness(105%) contrast(92%);
-  }
   .header nav .main-nav {
     display: flex;
     list-style: none;
     gap: 2.5em;
   }
+}
+.header nav .main-nav section .social-media-links {
+  color: #dbe2ef;
+  filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg) brightness(105%) contrast(92%);
 }
 .header nav .main-nav a {
   text-decoration: none;
@@ -124,8 +122,7 @@ footer .footer-sections p {
 }
 footer .footer-sections .social-media-links {
   color: #dbe2ef;
-  filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg)
-    brightness(105%) contrast(92%);
+  filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg) brightness(105%) contrast(92%);
   padding: 3px;
 }
 footer .footer-sections #municipality-logo {
@@ -262,6 +259,104 @@ main section img {
   width: 100%;
   max-height: 25em;
   object-fit: cover;
+}
+
+.secNav {
+  margin: 17px 10px;
+}
+@media (min-width: 750px) {
+  .secNav {
+    background-color: #112d4e;
+    box-shadow: 0 0.2em 0.3em black;
+    border-radius: 0.5em 0.5em 0.5em 0.5em;
+  }
+}
+
+.secNav menu {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  max-width: 1000px;
+}
+
+.secNav-menu-item {
+  list-style: none;
+  width: 100%;
+  text-align: center;
+  margin-top: 7px;
+  border-radius: 0.5em 0.5em 0.5em 0.5em;
+  box-shadow: 0 0.2em 0.3em black;
+}
+@media (min-width: 750px) {
+  .secNav-menu-item {
+    width: auto;
+    box-shadow: none;
+    background-color: #112d4e;
+  }
+}
+
+.secNav-menu-item button {
+  cursor: pointer;
+  border: none;
+  background-color: #112d4e;
+  color: #dbe2ef;
+  font-family: "Inter", sans-serif;
+  text-align: center;
+  list-style: none;
+  font-weight: bold;
+  font-size: 16px;
+  width: 100%;
+  border-radius: 0.5em 0.5em 0.5em 0.5em;
+  background-color: transparent;
+  box-shadow: none;
+  margin: 0;
+  padding: 20px 27px;
+}
+.secNav-menu-item button:hover {
+  transform: scale(1.1);
+  color: whitesmoke;
+}
+@media (max-width: 750px) {
+  .secNav-menu-item button {
+    background-color: #091829;
+  }
+  .secNav-menu-item button:hover {
+    background-color: #08121f;
+    transform: scale(1);
+  }
+}
+
+.secNav-dropdown {
+  display: none;
+  position: relative;
+  box-shadow: 0 0.2em 0.3em black;
+  z-index: 1;
+}
+@media (min-width: 750px) {
+  .secNav-dropdown {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.9254901961);
+  }
+}
+
+.secNav-dropdown a {
+  background-color: #112d4e;
+  margin-top: 1px;
+  cursor: pointer;
+  width: 100%;
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.secNav-dropdown a:hover {
+  background-color: #2361a8;
+}
+
+.show {
+  display: block;
 }
 
 .picture-container {
