--- a/static/main.css
+++ b/static/main.css
@@ -255,6 +255,104 @@ main section img {
   object-fit: cover;
 }
 
+.secNav {
+  margin: 17px 10px;
+}
+@media (min-width: 750px) {
+  .secNav {
+    background-color: #112d4e;
+    box-shadow: 0 0.2em 0.3em black;
+    border-radius: 0.5em 0.5em 0.5em 0.5em;
+  }
+}
+
+.secNav menu {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  max-width: 1000px;
+}
+
+.secNav-menu-item {
+  list-style: none;
+  width: 100%;
+  text-align: center;
+  margin-top: 7px;
+  border-radius: 0.5em 0.5em 0.5em 0.5em;
+  box-shadow: 0 0.2em 0.3em black;
+}
+@media (min-width: 750px) {
+  .secNav-menu-item {
+    width: auto;
+    box-shadow: none;
+    background-color: #112d4e;
+  }
+}
+
+.secNav-menu-item button {
+  cursor: pointer;
+  border: none;
+  background-color: #112d4e;
+  color: #dbe2ef;
+  font-family: "Inter", sans-serif;
+  text-align: center;
+  list-style: none;
+  font-weight: bold;
+  font-size: 16px;
+  width: 100%;
+  border-radius: 0.5em 0.5em 0.5em 0.5em;
+  background-color: transparent;
+  box-shadow: none;
+  margin: 0;
+  padding: 20px 27px;
+}
+.secNav-menu-item button:hover {
+  transform: scale(1.1);
+  color: whitesmoke;
+}
+@media (max-width: 750px) {
+  .secNav-menu-item button {
+    background-color: #091829;
+  }
+  .secNav-menu-item button:hover {
+    background-color: #08121f;
+    transform: scale(1);
+  }
+}
+
+.secNav-dropdown {
+  display: none;
+  position: relative;
+  box-shadow: 0 0.2em 0.3em black;
+  z-index: 1;
+}
+@media (min-width: 750px) {
+  .secNav-dropdown {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.9254901961);
+  }
+}
+
+.secNav-dropdown a {
+  background-color: #112d4e;
+  margin-top: 1px;
+  cursor: pointer;
+  width: 100%;
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.secNav-dropdown a:hover {
+  background-color: #2361a8;
+}
+
+.show {
+  display: block;
+}
+
 .picture-container {
   display: grid;
   grid-template-columns: repeat(3, auto);
@@ -277,4 +375,75 @@ main section img {
     max-width: 7em;
     height: auto;
   }
+}
+
+.modal-container {
+  display: none;
+  position: fixed;
+  background-color: white;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.modal-container.show {
+  display: block;
+}
+.modal-container .cinema-modal {
+  overflow: hidden;
+  text-align: center;
+  position: relative;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  border-radius: 5px;
+  background-color: white;
+  width: 90%;
+  max-width: 700px;
+  height: auto;
+  margin: 20vh auto;
+  animation: fadeInModal 0.6s;
+  padding-bottom: 40px;
+}
+.modal-container .cinema-modal .cards-modal {
+  width: 100%;
+  min-height: 400px;
+  flex-direction: row;
+}
+.modal-container .cinema-modal .text-container {
+  font-size: 20px;
+  margin: 10px;
+}
+.modal-container .cinema-modal .book-movie {
+  font-size: 20px;
+  width: 200px;
+  height: 60px;
+  margin-top: 40px;
+  border-radius: 5px;
+  border: none;
+  background-color: #112d4e;
+  color: #dbe2ef;
+  transition: 0.2s;
+}
+.modal-container .cinema-modal .book-movie:hover {
+  transform: scale(1.02);
+}
+.modal-container .cinema-modal .book-movie:active {
+  transform: scale(0.99);
+}
+.modal-container .cinema-modal .close {
+  font-size: 20px;
+  width: 200px;
+  height: 60px;
+  margin-top: 40px;
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(204, 40, 40);
+  color: #dbe2ef;
+  transition: 0.2s;
+}
+.modal-container .cinema-modal .close:hover {
+  transform: scale(1.02);
+}
+.modal-container .cinema-modal .close:active {
+  transform: scale(0.99);
 }
