--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -5,17 +5,24 @@
   color: $text-color;
   min-height: 150px;
 
-  
   .top-header {
     padding-top: 40px;
     display: flex;
     justify-content: center;
+    align-items: center;
+
     gap: 90px;
-    
+
     .logotype {
-      width: 5em;
+      width: 12em;
       height: auto;
-      border-radius: 60px;
+      @media screen and (min-width: 1400px) {
+        position: absolute;
+        top: 20px;
+        left: 0;
+        width: 19em;
+        height: auto;
+      }
     }
     h1 {
       font-size: xx-large;
@@ -24,6 +31,9 @@
       margin-left: -80px;
       @media screen and (min-width: $screen-breakpoint) {
         font-size: 60px;
+      }
+      @media screen and (max-width: 400px) {
+        display: none;
       }
     }
     #hamburger-icon {
@@ -51,10 +61,9 @@
       text-decoration: none;
       font-size: 0.9em;
       margin-bottom: 1em;
-      
+
       section {
-        
-        .social-media-links {          
+        .social-media-links {
           @include iconColor;
         }
       }
