--- a/static/main.css
+++ b/static/main.css
@@ -21,12 +21,21 @@ html {
   padding-top: 40px;
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 90px;
 }
 .header .top-header .logotype {
-  width: 5em;
+  width: 12em;
   height: auto;
-  border-radius: 60px;
+}
+@media screen and (min-width: 1400px) {
+  .header .top-header .logotype {
+    position: absolute;
+    top: 20px;
+    left: 0;
+    width: 19em;
+    height: auto;
+  }
 }
 .header .top-header h1 {
   font-size: xx-large;
@@ -37,6 +46,11 @@ html {
 @media screen and (min-width: 750px) {
   .header .top-header h1 {
     font-size: 60px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .header .top-header h1 {
+    display: none;
   }
 }
 .header .top-header #hamburger-icon {
