--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -4,6 +4,7 @@
   box-shadow: 0 0.2em 0.3em black;
   color: $text-color;
   min-height: 150px;
+  margin-bottom: 40px;
 
   .top-header {
     padding-top: 40px;
@@ -20,7 +21,7 @@
         position: absolute;
         top: 20px;
         left: 0;
-        width: 19em;
+        width: 17em;
         height: auto;
       }
     }
