--- a/static/main.css
+++ b/static/main.css
@@ -16,6 +16,7 @@ html {
   box-shadow: 0 0.2em 0.3em black;
   color: #dbe2ef;
   min-height: 150px;
+  margin-bottom: 40px;
 }
 .header .top-header {
   padding-top: 40px;
@@ -33,7 +34,7 @@ html {
     position: absolute;
     top: 20px;
     left: 0;
-    width: 19em;
+    width: 17em;
     height: auto;
   }
 }
@@ -60,8 +61,7 @@ html {
   width: 3em;
   margin: 0em 1em 0 0;
   color: #dbe2ef;
-  filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg)
-    brightness(105%) contrast(92%);
+  filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg) brightness(105%) contrast(92%);
 }
 @media screen and (min-width: 750px) {
   .header .top-header #hamburger-icon {
@@ -95,8 +95,7 @@ html {
 }
 .header nav .main-nav section .social-media-links {
   color: #dbe2ef;
-  filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg)
-    brightness(105%) contrast(92%);
+  filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg) brightness(105%) contrast(92%);
 }
 .header nav .main-nav a {
   text-decoration: none;
@@ -138,8 +137,7 @@ footer .footer-sections p {
 }
 footer .footer-sections .social-media-links {
   color: #dbe2ef;
-  filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg)
-    brightness(105%) contrast(92%);
+  filter: invert(94%) sepia(10%) saturate(397%) hue-rotate(16deg) brightness(105%) contrast(92%);
   padding: 3px;
 }
 footer .footer-sections #municipality-logo {
@@ -400,31 +398,6 @@ main section img {
   }
 }
 
-.screen {
-  width: 65%;
-  background-color: crimson;
-  font-size: 3em;
-}
-
-.seat {
-  background-color: rgb(167, 216, 233);
-  width: 20px;
-  height: 20px;
-}
-
-.seatPlanCanvas {
-  display: grid;
-  grid-template-columns: repeat(12, auto);
-  grid-template-rows: repeat(6, auto);
-  gap: 40px;
-  margin: 50px 0;
-}
-@media screen and (max-width: 415px) {
-  .seatPlanCanvas {
-    gap: 20px;
-  }
-}
-
 .modal-container {
   display: none;
   position: fixed;
@@ -494,4 +467,29 @@ main section img {
 }
 .modal-container .cinema-modal .close:active {
   transform: scale(0.99);
+}
+
+.screen {
+  width: 65%;
+  background-color: crimson;
+  font-size: 3em;
+}
+
+.seat {
+  background-color: rgb(167, 216, 233);
+  width: 20px;
+  height: 20px;
+}
+
+.seatPlanCanvas {
+  display: grid;
+  grid-template-columns: repeat(12, auto);
+  grid-template-rows: repeat(6, auto);
+  gap: 40px;
+  margin: 50px 0;
+}
+@media screen and (max-width: 415px) {
+  .seatPlanCanvas {
+    gap: 20px;
+  }
 }
