opening hours & contact page elements and footer

--- a/src/main.scss
+++ b/src/main.scss
@@ -16,4 +16,4 @@ html {
 @import "styles/secNav.scss";
 @import "styles/cards.scss";
 @import "styles/booking.scss";
-
+@import "styles/opening.scss";
